# sunshine_android

./: .gitignore  .gitmodules  README.md  gen_patch.sh  pubspec.yaml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: cacert.pem  cakey.pem  firefly-monitor-release.spkg  index.html  index.js  navarro-dock-release.spkg  ridge-dock-release.spkg
android/app/src/main/cpp/: CMakeLists copy.txt  audio.cpp  audio.h  config.cpp  config.h  crypto.cpp  crypto.h  entry_handler.h  file_handler.cpp  file_handler.h  globals.cpp  globals.h  input.cpp  input.h  logging.cpp  logging.h  move_by_copy.h  (+23 more)
android/app/src/main/cpp/dependencies/libopus/: CMakeLists.txt
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
patchs/: audio.cpp.patch  audio.h.patch  config.cpp.patch  input.cpp.patch  logging.cpp.patch  move_by_copy.h.patch  network.cpp.patch  network.h.patch  nvhttp.cpp.patch  nvhttp.h.patch  rtsp.cpp.patch  rtsp.h.patch  stat_trackers.cpp.patch  stat_trackers.h.patch  stream.cpp.patch  stream.h.patch  video.cpp.patch  video_colorspace.cpp.patch
scripts/: apply_patch.sh  gen_patch.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
